data preprocessing, filling missing values, and combining columns

--- a/fake news prediction.ipynb
+++ b/fake news prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a5f1e134-6ee0-45d5-b588-c91417c2f676",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1ac459e1-cad7-4626-9282-878b01b1583b",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     C:\\Users\\VICTUS\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -47,19 +47,21 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# downloading the nltk package \n",
+    "\n",
     "import nltk\n",
     "nltk.download('stopwords')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b53c96a7-c919-4644-b520-fcf41edf62e3",
    "metadata": {},
    "outputs": [
@@ -247,19 +249,310 @@
        " \"wouldn't\"]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# words that do not add too much to a sentence, stopwords in english\n",
+    "\n",
     "stopwords.words('english')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "50b070e8-6f73-4602-a134-2646a9470aed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20800, 5)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data preprocessing \n",
+    "\n",
+    "news_data = pd.read_csv('./train.csv/train.csv')\n",
+    "news_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cb5461df-8133-4aa9-a306-2d3a945f693e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>House Dem Aide: We Didn’t Even See Comey’s Let...</td>\n",
+       "      <td>Darrell Lucus</td>\n",
+       "      <td>House Dem Aide: We Didn’t Even See Comey’s Let...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>FLYNN: Hillary Clinton, Big Woman on Campus - ...</td>\n",
+       "      <td>Daniel J. Flynn</td>\n",
+       "      <td>Ever get the feeling your life circles the rou...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Why the Truth Might Get You Fired</td>\n",
+       "      <td>Consortiumnews.com</td>\n",
+       "      <td>Why the Truth Might Get You Fired October 29, ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>15 Civilians Killed In Single US Airstrike Hav...</td>\n",
+       "      <td>Jessica Purkiss</td>\n",
+       "      <td>Videos 15 Civilians Killed In Single US Airstr...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iranian woman jailed for fictional unpublished...</td>\n",
+       "      <td>Howard Portnoy</td>\n",
+       "      <td>Print \\nAn Iranian woman has been sentenced to...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                              title              author  \\\n",
+       "0   0  House Dem Aide: We Didn’t Even See Comey’s Let...       Darrell Lucus   \n",
+       "1   1  FLYNN: Hillary Clinton, Big Woman on Campus - ...     Daniel J. Flynn   \n",
+       "2   2                  Why the Truth Might Get You Fired  Consortiumnews.com   \n",
+       "3   3  15 Civilians Killed In Single US Airstrike Hav...     Jessica Purkiss   \n",
+       "4   4  Iranian woman jailed for fictional unpublished...      Howard Portnoy   \n",
+       "\n",
+       "                                                text  label  \n",
+       "0  House Dem Aide: We Didn’t Even See Comey’s Let...      1  \n",
+       "1  Ever get the feeling your life circles the rou...      0  \n",
+       "2  Why the Truth Might Get You Fired October 29, ...      1  \n",
+       "3  Videos 15 Civilians Killed In Single US Airstr...      1  \n",
+       "4  Print \\nAn Iranian woman has been sentenced to...      1  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "82798daf-910a-4b88-b784-ce8b7852191a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label\n",
+       "1    10413\n",
+       "0    10387\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# counting the total number of labels\n",
+    "news_data['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0790a796-f485-4671-81f8-42bcf2d49c40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title\n",
+       "Get Ready For Civil Unrest: Survey Finds That Most Americans Are Concerned About Election Violence              5\n",
+       "The Dark Agenda Behind Globalism And Open Borders                                                               5\n",
+       "Schools All Over America Are Closing On Election Day Due To Fears Of Violence                                   4\n",
+       "“If Trump Loses, I’m Grabbing My Musket”: Former Congressman Ready to Go Full Revolution                        4\n",
+       "Public vs. Media on War                                                                                         4\n",
+       "                                                                                                               ..\n",
+       "Report: Only 6% of Millennials Said Their Social Media Was a ’Completely True’ Depiction of Them - Breitbart    1\n",
+       "Hillary Clinton, Donald Trump, Iraq Inquiry: Your Wednesday Evening Briefing - The New York Times               1\n",
+       "Shall We Save Civilization, or Not? - American Herald Tribune                                                   1\n",
+       "Syria’s Horrors Visit Turkey Again as Bomber Attacks Kurdish Wedding - The New York Times                       1\n",
+       "NATO, Russia To Hold Parallel Exercises In Balkans                                                              1\n",
+       "Name: count, Length: 19803, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# counting the total number of titles\n",
+    "# news_data['title'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0c9964b5-53f0-4b02-9746-ffd9c92d3a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id           0\n",
+       "title      558\n",
+       "author    1957\n",
+       "text        39\n",
+       "label        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# counting the total number of missing values in the dataset\n",
+    "news_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "23a87576-bf81-4e12-9cfe-c3ee24e03e47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replacing the null values with empty strings\n",
+    "\n",
+    "news_data = news_data.fillna('')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3315c8f4-9253-49c2-aa1f-05e091bf5f3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id        0\n",
+       "title     0\n",
+       "author    0\n",
+       "text      0\n",
+       "label     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# all the missing data has been replaces with empty strings\n",
+    "news_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "96ad8468-c04a-4efe-a037-c93aecf80cef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Darrell Lucus House Dem Aide: We Didn’t Even S...\n",
+       "1        Daniel J. Flynn FLYNN: Hillary Clinton, Big Wo...\n",
+       "2        Consortiumnews.com Why the Truth Might Get You...\n",
+       "3        Jessica Purkiss 15 Civilians Killed In Single ...\n",
+       "4        Howard Portnoy Iranian woman jailed for fictio...\n",
+       "                               ...                        \n",
+       "20795    Jerome Hudson Rapper T.I.: Trump a ’Poster Chi...\n",
+       "20796    Benjamin Hoffman N.F.L. Playoffs: Schedule, Ma...\n",
+       "20797    Michael J. de la Merced and Rachel Abrams Macy...\n",
+       "20798    Alex Ansary NATO, Russia To Hold Parallel Exer...\n",
+       "20799              David Swanson What Keeps the F-35 Alive\n",
+       "Name: content, Length: 20800, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merging the author and title, they are the ones that will be used in the data analysis.......text cannot be used because they are too large\n",
+    "# We are creating a new column called content, by combining author and title, but we leave a space between the two using the empty strings in between\n",
+    "\n",
+    "news_data['content'] = news_data['author'] +' '+ news_data['title']\n",
+    "news_data['content']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d2def36-bd2a-4da3-8246-93146b6ff3b9",
    "metadata": {},
    "outputs": [],
    "source": []
