--- a/fake news prediction.ipynb
+++ b/fake news prediction.ipynb
@@ -804,7 +804,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stemming procedure - extracting the base form of words by removing the prefix and suffixes using the stopword"
+    "# stemming procedure - extracting the base form of words by removing the prefix and suffixes using the stopwords\n",
+    "# example actor, actress, acting --> act\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
