creating the stemming function

--- a/fake news prediction.ipynb
+++ b/fake news prediction.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b53c96a7-c919-4644-b520-fcf41edf62e3",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        " \"wouldn't\"]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "50b070e8-6f73-4602-a134-2646a9470aed",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "(20800, 5)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "82798daf-910a-4b88-b784-ce8b7852191a",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "0c9964b5-53f0-4b02-9746-ffd9c92d3a06",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "23a87576-bf81-4e12-9cfe-c3ee24e03e47",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "3315c8f4-9253-49c2-aa1f-05e091bf5f3f",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "96ad8468-c04a-4efe-a037-c93aecf80cef",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
        "Name: content, Length: 20800, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "2d2def36-bd2a-4da3-8246-93146b6ff3b9",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "(20800, 6)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "7ddb25f2-1749-4223-8c20-eb1dff172dff",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
        "4  Howard Portnoy Iranian woman jailed for fictio...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "ddf98a96-03cf-4077-a70a-691b557dc769",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
        " Name: label, Length: 20800, dtype: int64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "df7997d0-b0e1-426e-ae62-c0c97d12972f",
    "metadata": {},
    "outputs": [
@@ -788,7 +788,7 @@
        "(20800, 5)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,17 +799,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7f4ab5f8-5a26-4bc2-8af9-ebd0ba72a4ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "# stemming procedure - extracting the base form of words by removing the prefix and suffixes using the stopwords\n",
     "# example actor, actress, acting --> act\n",
+    "# importing the porter stemmer module\n",
     "\n",
-    "\n",
+    "port_stem = PorterStemmer()\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d514659f-f465-419b-bbb2-683007f22537",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Writing a function for the stemming\n",
+    "# Content is the value to be passed into the function\n",
+    "# The first line is the re.sub\n",
+    "# The re.sub, re, is a regular expression that searches through text, and the .sub method kind of filters the the words and returns only alphabets, both small and capital.\n",
+    "# It excludes all other characters like ,. numbers and returns alphabets alone.\n",
+    "# The operation will be done on the content that has been passed over there.\n",
+    "# The .lower function, converts all the alphabets to small letters\n",
+    "# The split function converts all the letters to a list \n",
+    "\n",
+    "def stemming (content):\n",
+    "    stemmed_content = re.sub('[^a-zA-Z]',' ', content)\n",
+    "    stemmed_content = stemmed_content.lower()\n",
+    "    stemmed_content = stemmed_content.split()\n",
+    "    stemmed_content = [port_stem.stem(word) for word in stemmed_content if not word in stopwords.words('english')]\n",
+    "    stemmed_content = ' '.join(stemmed_content)\n",
+    "    return stemmed_content\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faa6a9b3-c82e-46b5-a682-c6ff46e250c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# applying the "
    ]
   }
  ],
