--- a/fake news prediction.ipynb
+++ b/fake news prediction.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cb5461df-8133-4aa9-a306-2d3a945f693e",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "4  Print \\nAn Iranian woman has been sentenced to...      1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "82798daf-910a-4b88-b784-ce8b7852191a",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,33 +415,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0790a796-f485-4671-81f8-42bcf2d49c40",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "title\n",
-       "Get Ready For Civil Unrest: Survey Finds That Most Americans Are Concerned About Election Violence              5\n",
-       "The Dark Agenda Behind Globalism And Open Borders                                                               5\n",
-       "Schools All Over America Are Closing On Election Day Due To Fears Of Violence                                   4\n",
-       "“If Trump Loses, I’m Grabbing My Musket”: Former Congressman Ready to Go Full Revolution                        4\n",
-       "Public vs. Media on War                                                                                         4\n",
-       "                                                                                                               ..\n",
-       "Report: Only 6% of Millennials Said Their Social Media Was a ’Completely True’ Depiction of Them - Breitbart    1\n",
-       "Hillary Clinton, Donald Trump, Iraq Inquiry: Your Wednesday Evening Briefing - The New York Times               1\n",
-       "Shall We Save Civilization, or Not? - American Herald Tribune                                                   1\n",
-       "Syria’s Horrors Visit Turkey Again as Bomber Attacks Kurdish Wedding - The New York Times                       1\n",
-       "NATO, Russia To Hold Parallel Exercises In Balkans                                                              1\n",
-       "Name: count, Length: 19803, dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# counting the total number of titles\n",
     "# news_data['title'].value_counts()"
@@ -449,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0c9964b5-53f0-4b02-9746-ffd9c92d3a06",
    "metadata": {},
    "outputs": [
@@ -464,7 +441,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "23a87576-bf81-4e12-9cfe-c3ee24e03e47",
    "metadata": {},
    "outputs": [],
@@ -488,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3315c8f4-9253-49c2-aa1f-05e091bf5f3f",
    "metadata": {},
    "outputs": [
@@ -503,7 +480,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "96ad8468-c04a-4efe-a037-c93aecf80cef",
    "metadata": {},
    "outputs": [
@@ -536,7 +513,7 @@
        "Name: content, Length: 20800, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2d2def36-bd2a-4da3-8246-93146b6ff3b9",
    "metadata": {},
    "outputs": [
@@ -561,7 +538,7 @@
        "(20800, 6)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "7ddb25f2-1749-4223-8c20-eb1dff172dff",
    "metadata": {},
    "outputs": [
@@ -678,7 +655,7 @@
        "4  Howard Portnoy Iranian woman jailed for fictio...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ddf98a96-03cf-4077-a70a-691b557dc769",
    "metadata": {},
    "outputs": [
@@ -763,7 +740,7 @@
        " Name: label, Length: 20800, dtype: int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "df7997d0-b0e1-426e-ae62-c0c97d12972f",
    "metadata": {},
    "outputs": [
@@ -788,7 +765,7 @@
        "(20800, 5)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "d514659f-f465-419b-bbb2-683007f22537",
    "metadata": {},
    "outputs": [],
@@ -840,13 +817,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "faa6a9b3-c82e-46b5-a682-c6ff46e250c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# applying the "
+    "# Applying the function to our content column, and returning a new content column with the stemmed words\n",
+    "\n",
+    "news_data['content'] = news_data['content'].apply(stemming)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c56e01d5-05c3-4563-bc8c-179057a1afc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        darrel lucu hou dem aid even see comey letter ...\n",
+       "1        daniel j flynn flynn hillari clinton big woman...\n",
+       "2                   consortiumnew com truth might get fire\n",
+       "3        jessica purkiss civilian kill singl us airstri...\n",
+       "4        howard portnoy iranian woman jail fiction unpu...\n",
+       "                               ...                        \n",
+       "20795    jerom hudson rapper trump poster child white s...\n",
+       "20796    benjamin hoffman n f l playoff schedul matchup...\n",
+       "20797    michael j de la merc rachel abram maci said re...\n",
+       "20798    alex ansari nato russia hold parallel exerci b...\n",
+       "20799                            david swanson keep f aliv\n",
+       "Name: content, Length: 20800, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news_data['content']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "7055efad-31e4-453c-b168-dd75914b37ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['darrel lucu hou dem aid even see comey letter jason chaffetz tweet',\n",
+       "        'daniel j flynn flynn hillari clinton big woman campu breitbart',\n",
+       "        'consortiumnew com truth might get fire', ...,\n",
+       "        'michael j de la merc rachel abram maci said receiv takeov approach hudson bay new york time',\n",
+       "        'alex ansari nato russia hold parallel exerci balkan',\n",
+       "        'david swanson keep f aliv'], dtype=object),\n",
+       " array([1, 0, 1, ..., 0, 1, 1], dtype=int64))"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# As we only want to work with the content column in making predictions, we will reassign X to the content column\n",
+    "\n",
+    "X = news_data['content'].values\n",
+    "y = news_data['label'].values\n",
+    "X,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "4194e192-031e-40bb-a82d-e6868407b97b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# converting the stemmed text into numbers so that the machine can understand\n",
+    "# counts how much a word is repeated, and gives a value, and transforms the word to feature vectors which are basically numbers\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "vectorizer.fit(X)\n",
+    "X = vectorizer.transform(X)\n",
+    "# X = vectorizer.fit_transform(X)\n",
+    "# X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "54871540-b8ad-4c22-b7da-b35deebd7059",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<20800x16984 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 210584 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X\n",
+    "# dense = X.toarray()\n",
+    "# dense\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2d36e75-7c1b-4b84-89cb-ea3d7020a333",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
